--- a/November/index.html
+++ b/November/index.html
@@ -2,16 +2,15 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Patients Urgency</title>
+  <title>Pictorial Stacked Chart</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<script src="https://cdn.amcharts.com/lib/4/core.js"></script>
-<script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
-<script src="https://cdn.amcharts.com/lib/4/themes/dark.js"></script>
-<script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/index.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/percent.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
 <div id="chartdiv"></div>
 <!-- partial -->
   <script  src="./script.js"></script>
